Update text and image in index.html

--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@ for(let i=0;i<25;i++){
 
 <!-- PAGE 2 : SCRATCH -->
 <div class="card hidden" id="pageScratch">
-  <h2>Scratch to reveal 💙</h2>
+  <h2>💚🩷🩵💙Scratch to reveal💚🩷🩵💙</h2>
   <div class="scratch-container">
-    <img src="YOUR_IMAGE_URL_HERE">
+    <img src="DSfam.png">
     <canvas id="scratch"></canvas>
   </div>
   <button class="yes hidden" id="continueBtn" onclick="openTyping()">Continue 💕</button>
@@ -146,7 +146,7 @@ for(let i=0;i<25;i++){
 <!-- PAGE 3 -->
 <div class="card hidden" id="page2">
   <h2>Hey handsome ❤️</h2>
-  <p>Type <b>i love you pondatti</b> to unlock my surprise love letter</p>
+  <p>Type <b>i love you di pondati..</b> to unlock my surprise love letter</p>
   <input type="text" id="loveInput">
   <br><br>
   <button class="yes" onclick="checkText()">Submit 💕</button>
@@ -215,14 +215,18 @@ function scratch(e){
 }
 
 /* Typing check */
-const letterContent=`My love, you’ve been my everything since the day we met.
-Even after marriage, our love keeps growing stronger.
-You work hard for us every day,
+const letterContent=`My love, you’ve been my everything since the day we met.\
 and I fall in love with you again and again.
+I wish to live my rest of the life with you Thangamey...
+Lets shine and grow together.
+Dharsh, You are the meaning of my life.
+This is our first valentines day.... i am sooo exceited..hehehe😍🤩😍🤩
+i love you dharsh...🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂
+Dharshan....ummmhhhhhaaaaaa💋💋💋💋💋💋💋💋💋💋💋💋
 
 You are my forever,
-my safe place,
-my Dharshan 💙💗`;
+my love,
+my Dharshan 💚💗💙`;
 
 let index=0;
 function typeLetter(){
